make result_ttl and job_timeout configurable per task
