# api/openAPI3/swagger_server/controllers/scheduler_controller.py
@@ -48,7 +48,7 @@ def get_job_queue():  # noqa: E501
     return disp.get_job_queue()
 
 
-def submit_job(body=None):  # noqa: E501
+def submit_job(job_timeout=None, result_ttl=None, body=None):  # noqa: E501
     """Submit a job
 
     set up the run outside of the scheduler. The scheduler doesn&#x27;t care what the set-up looks like as long as it&#x27;s well-constructed JSON. For example, the run could be a serialized object with all the run parameters, or it could be a quoted unique id that the application-specific worker knows how to lookup. # noqa: E501
@@ -58,4 +58,4 @@ def submit_job(body=None):  # noqa: E501
 
     :rtype: Job
     """
-    return disp.submit_job(connexion.request.get_json())
+    return disp.submit_job(job_timeout, result_ttl, body)
